--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -9,7 +9,7 @@ blocks:
     task:
       prologue:
         commands:
-          - sem-version erlang 22
+          - sem-version erlang 23.2
           - sem-version elixir master
           - elixir -v
           - checkout
@@ -33,9 +33,19 @@ blocks:
   - name: Run tests
     task:
       jobs:
+        - name: Elixir master, OTP 23
+          commands:
+            - sem-version erlang 23.2
+            - sem-version elixir master
+            - elixir -v
+            - checkout
+            - mix local.rebar --force
+            - mix local.hex --force
+            - mix deps.get
+            - mix test
         - name: Elixir master, OTP 22
           commands:
-            - sem-version erlang 22
+            - sem-version erlang 22.3
             - sem-version elixir master
             - elixir -v
             - checkout
@@ -45,7 +55,7 @@ blocks:
             - mix test
         - name: Elixir master, OTP 21
           commands:
-            - sem-version erlang 21
+            - sem-version erlang 21.3
             - sem-version elixir master
             - elixir -v
             - checkout
@@ -53,20 +63,60 @@ blocks:
             - mix local.hex --force
             - mix deps.get
             - mix test
-        - name: Elixir 1.10.3, OTP 22
+        - name: Elixir 1.11.3, OTP 23
           commands:
-            - sem-version erlang 22
-            - sem-version elixir 1.10.3
+            - sem-version erlang 23.2
+            - sem-version elixir 1.11.3
             - elixir -v
             - checkout
             - mix local.rebar --force
             - mix local.hex --force
             - mix deps.get
             - mix test
-        - name: Elixir 1.10.3, OTP 21
+        - name: Elixir 1.11.3, OTP 22
           commands:
-            - sem-version erlang 21
-            - sem-version elixir 1.10.3
+            - sem-version erlang 22.3
+            - sem-version elixir 1.11.3
+            - elixir -v
+            - checkout
+            - mix local.rebar --force
+            - mix local.hex --force
+            - mix deps.get
+            - mix test
+        - name: Elixir 1.11.3, OTP 21
+          commands:
+            - sem-version erlang 21.3
+            - sem-version elixir 1.11.3
+            - elixir -v
+            - checkout
+            - mix local.rebar --force
+            - mix local.hex --force
+            - mix deps.get
+            - mix test
+        - name: Elixir 1.10.4, OTP 23
+          commands:
+            - sem-version erlang 23.2
+            - sem-version elixir 1.10.4
+            - elixir -v
+            - checkout
+            - mix local.rebar --force
+            - mix local.hex --force
+            - mix deps.get
+            - mix test
+        - name: Elixir 1.10.4, OTP 22
+          commands:
+            - sem-version erlang 22.3
+            - sem-version elixir 1.10.4
+            - elixir -v
+            - checkout
+            - mix local.rebar --force
+            - mix local.hex --force
+            - mix deps.get
+            - mix test
+        - name: Elixir 1.10.4, OTP 21
+          commands:
+            - sem-version erlang 21.3
+            - sem-version elixir 1.10.4
             - elixir -v
             - checkout
             - mix local.rebar --force
@@ -75,7 +125,7 @@ blocks:
             - mix test
         - name: Elixir 1.9.4, OTP 22
           commands:
-            - sem-version erlang 22
+            - sem-version erlang 22.3
             - sem-version elixir 1.9.4
             - elixir -v
             - checkout
@@ -85,7 +135,7 @@ blocks:
             - mix test
         - name: Elixir 1.9.4, OTP 21
           commands:
-            - sem-version erlang 21
+            - sem-version erlang 21.3
             - sem-version elixir 1.9.4
             - elixir -v
             - checkout
@@ -95,7 +145,7 @@ blocks:
             - mix test
         - name: Elixir 1.9.4, OTP 20
           commands:
-            - sem-version erlang 20
+            - sem-version erlang 20.3
             - sem-version elixir 1.9.4
             - elixir -v
             - checkout
