Refactor Git lint script
Combine everything in one script so it's easier to maintain, the env var
with the version, the installation and running the command.

If the env vars are in the `semaphore.yml` file, it would also need to
update the `semaphore.yml` file every time you change it. It's easy to
forget, and would need multiple builds to fix.

--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -12,12 +12,8 @@ blocks:
           - checkout
       jobs:
         - name: Git Lint (Lintje)
-          env_vars:
-            - name: LINTJE_VERSION
-              value: "0.3.0"
           commands:
-            - script/install_lintje
-            - $HOME/bin/lintje $SEMAPHORE_GIT_COMMIT_RANGE
+            - script/lint_git
         - name: mix format --check-formatted
           commands:
             - ERLANG_VERSION=24.0 ELIXIR_VERSION=1.12.2 bin/setup
