--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -14,6 +14,10 @@ blocks:
         - name: Git Lint (Lintje)
           commands:
             - script/lint_git
+        - name: mix compile
+          commands:
+            - ERLANG_VERSION=24.0 ELIXIR_VERSION=1.12.2 . bin/setup
+            - mix compile
         - name: mix format --check-formatted
           commands:
             - ERLANG_VERSION=24.0 ELIXIR_VERSION=1.12.2 . bin/setup
