--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -1,3 +1,7 @@
+# DO NOT EDIT
+# This is a generated file by the `script/generate_ci_matrix` task.
+# See `.semaphore/semaphore.yml.erb` for the build matrix.
+# Generate this file with `script/generate_ci_matrix`.
 version: v1.0
 name: AppSignal Elixir Build and Tests
 agent:
@@ -14,76 +18,115 @@ blocks:
         - name: Git Lint (Lintje)
           commands:
             - script/lint_git
+        - name: Validate CI matrix
+          commands:
+            - script/validate_ci_matrix
         - name: mix compile
           commands:
-            - ERLANG_VERSION=24.0 ELIXIR_VERSION=1.12.2 . bin/setup
+            - ERLANG_VERSION=25.0 ELIXIR_VERSION=1.14.0 . bin/setup
             - mix compile
         - name: mix format --check-formatted
           commands:
-            - ERLANG_VERSION=24.0 ELIXIR_VERSION=1.12.2 . bin/setup
+            - ERLANG_VERSION=25.0 ELIXIR_VERSION=1.14.0 . bin/setup
             - mix format --check-formatted
         - name: mix credo --strict
           commands:
-            - ERLANG_VERSION=24.0 ELIXIR_VERSION=1.12.2 . bin/setup
+            - ERLANG_VERSION=25.0 ELIXIR_VERSION=1.14.0 . bin/setup
             - mix credo --strict
         - name: mix dialyzer
           commands:
-            - ERLANG_VERSION=24.0 ELIXIR_VERSION=1.12.2 . bin/setup
+            - ERLANG_VERSION=25.0 ELIXIR_VERSION=1.14.0 . bin/setup
             - cache restore dialyzer-plt
             - MIX_ENV=dev mix dialyzer --plt
             - cache store dialyzer-plt priv/plts/
             - MIX_ENV=dev mix dialyzer --format dialyzer
-        - name: Elixir main, OTP 24
+        - name: Elixir main, OTP 25.0
           commands:
-            - ERLANG_VERSION=24.0 ELIXIR_VERSION=main . bin/setup
+            - ERLANG_VERSION=25.0 ELIXIR_VERSION=main . bin/setup
             - mix test
-        - name: Elixir 1.12.2, OTP 24
+        - name: Elixir 1.14.0, OTP 25.0
           commands:
-            - ERLANG_VERSION=24.0 ELIXIR_VERSION=1.12.2 . bin/setup
+            - ERLANG_VERSION=25.0 ELIXIR_VERSION=1.14.0 . bin/setup
             - mix test
-        - name: Elixir 1.12.2, OTP 23
+        - name: Elixir 1.13.4, OTP 25.0
           commands:
-            - ERLANG_VERSION=23.3 ELIXIR_VERSION=1.12.2 . bin/setup
+            - ERLANG_VERSION=25.0 ELIXIR_VERSION=1.13.4 . bin/setup
             - mix test
-        - name: Elixir 1.12.2, OTP 22
+        - name: Elixir main, OTP 24.3
           commands:
-            - ERLANG_VERSION=22.3 ELIXIR_VERSION=1.12.2 . bin/setup
+            - ERLANG_VERSION=24.3 ELIXIR_VERSION=main . bin/setup
             - mix test
-        - name: Elixir 1.11.4, OTP 24
+        - name: Elixir 1.14.0, OTP 24.3
           commands:
-            - ERLANG_VERSION=24.0 ELIXIR_VERSION=1.11.4 . bin/setup
+            - ERLANG_VERSION=24.3 ELIXIR_VERSION=1.14.0 . bin/setup
             - mix test
-        - name: Elixir 1.11.4, OTP 23
+        - name: Elixir 1.13.3, OTP 24.3
+          commands:
+            - ERLANG_VERSION=24.3 ELIXIR_VERSION=1.13.3 . bin/setup
+            - mix test
+        - name: Elixir 1.12.3, OTP 24.3
+          commands:
+            - ERLANG_VERSION=24.3 ELIXIR_VERSION=1.12.3 . bin/setup
+            - mix test
+        - name: Elixir 1.11.4, OTP 24.3
+          commands:
+            - ERLANG_VERSION=24.3 ELIXIR_VERSION=1.11.4 . bin/setup
+            - mix test
+        - name: Elixir 1.14.0, OTP 23.3
+          commands:
+            - ERLANG_VERSION=23.3 ELIXIR_VERSION=1.14.0 . bin/setup
+            - mix test
+        - name: Elixir 1.13.3, OTP 23.3
+          commands:
+            - ERLANG_VERSION=23.3 ELIXIR_VERSION=1.13.3 . bin/setup
+            - mix test
+        - name: Elixir 1.12.3, OTP 23.3
+          commands:
+            - ERLANG_VERSION=23.3 ELIXIR_VERSION=1.12.3 . bin/setup
+            - mix test
+        - name: Elixir 1.11.4, OTP 23.3
           commands:
             - ERLANG_VERSION=23.3 ELIXIR_VERSION=1.11.4 . bin/setup
             - mix test
-        - name: Elixir 1.11.4, OTP 22
-          commands:
-            - ERLANG_VERSION=22.3 ELIXIR_VERSION=1.11.4 . bin/setup
-            - mix test
-        - name: Elixir 1.11.4, OTP 21
-          commands:
-            - ERLANG_VERSION=21.3 ELIXIR_VERSION=1.11.4 . bin/setup
-            - mix test
-        - name: Elixir 1.10.4, OTP 23
+        - name: Elixir 1.10.4, OTP 23.3
           commands:
             - ERLANG_VERSION=23.3 ELIXIR_VERSION=1.10.4 . bin/setup
             - mix test
-        - name: Elixir 1.10.4, OTP 22
+        - name: Elixir 1.13.3, OTP 22.3
+          commands:
+            - ERLANG_VERSION=22.3 ELIXIR_VERSION=1.13.3 . bin/setup
+            - mix test
+        - name: Elixir 1.12.3, OTP 22.3
+          commands:
+            - ERLANG_VERSION=22.3 ELIXIR_VERSION=1.12.3 . bin/setup
+            - mix test
+        - name: Elixir 1.11.4, OTP 22.3
+          commands:
+            - ERLANG_VERSION=22.3 ELIXIR_VERSION=1.11.4 . bin/setup
+            - mix test
+        - name: Elixir 1.10.4, OTP 22.3
           commands:
             - ERLANG_VERSION=22.3 ELIXIR_VERSION=1.10.4 . bin/setup
             - mix test
-        - name: Elixir 1.10.4, OTP 21
-          commands:
-            - ERLANG_VERSION=21.3 ELIXIR_VERSION=1.10.4 . bin/setup
-            - mix test
-        - name: Elixir 1.9.4, OTP 22
+        - name: Elixir 1.9.4, OTP 22.3
           commands:
             - ERLANG_VERSION=22.3 ELIXIR_VERSION=1.9.4 . bin/setup
             - mix test
-        - name: Elixir 1.9.4, OTP 21
+        - name: Elixir 1.11.4, OTP 21.3
+          commands:
+            - ERLANG_VERSION=21.3 ELIXIR_VERSION=1.11.4 . bin/setup
+            - mix test
+        - name: Elixir 1.10.4, OTP 21.3
+          commands:
+            - ERLANG_VERSION=21.3 ELIXIR_VERSION=1.10.4 . bin/setup
+            - mix test
+        - name: Elixir 1.9.4, OTP 21.3
           commands:
             - ERLANG_VERSION=21.3 ELIXIR_VERSION=1.9.4 . bin/setup
+            - mix test
+        - name: Elixir 1.9.4, OTP 20.3
+          commands:
+            - ERLANG_VERSION=20.3 ELIXIR_VERSION=1.9.4 . bin/setup
             - mix test
       env_vars:
         - name: MIX_ENV
