--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -23,38 +23,66 @@ blocks:
             - script/validate_ci_matrix
         - name: mix compile
           commands:
-            - "ERLANG_VERSION=25.2 ELIXIR_VERSION=1.13.4 . bin/setup"
+            - "ERLANG_VERSION=26.0 ELIXIR_VERSION=1.15.0 . bin/setup"
             - mix compile
         - name: mix format --check-formatted
           commands:
-            - "ERLANG_VERSION=25.2 ELIXIR_VERSION=1.13.4 . bin/setup"
+            - "ERLANG_VERSION=26.0 ELIXIR_VERSION=1.15.0 . bin/setup"
             - mix format --check-formatted
         - name: mix credo --strict
           commands:
-            - "ERLANG_VERSION=25.2 ELIXIR_VERSION=1.13.4 . bin/setup"
+            - "ERLANG_VERSION=26.0 ELIXIR_VERSION=1.15.0 . bin/setup"
             - mix credo --strict
         - name: mix dialyzer
           commands:
-            - "ERLANG_VERSION=25.2 ELIXIR_VERSION=1.13.4 . bin/setup"
+            - "ERLANG_VERSION=26.0 ELIXIR_VERSION=1.15.0 . bin/setup"
             - cache restore dialyzer-plt
             - MIX_ENV=dev mix dialyzer --plt
             - cache store dialyzer-plt priv/plts/
             - MIX_ENV=dev mix dialyzer --format dialyzer
-        - name: Elixir 1.14.3, OTP 25.2, Phoenix ~> 1.7.0
+        - name: Elixir main, OTP 26.0, Phoenix ~> 1.7.0
           commands:
-            - "ERLANG_VERSION=25.2 ELIXIR_VERSION=1.14.3 PHOENIX_VERSION=\"~> 1.7.0\" . bin/setup"
+            - "ERLANG_VERSION=26.0 ELIXIR_VERSION=main PHOENIX_VERSION=\"~> 1.7.0\" . bin/setup"
             - mix test
-        - name: Elixir 1.13.4, OTP 25.2, Phoenix ~> 1.7.0
+        - name: Elixir 1.15.0, OTP 26.0, Phoenix ~> 1.7.0
           commands:
-            - "ERLANG_VERSION=25.2 ELIXIR_VERSION=1.13.4 PHOENIX_VERSION=\"~> 1.7.0\" . bin/setup"
+            - "ERLANG_VERSION=26.0 ELIXIR_VERSION=1.15.0 PHOENIX_VERSION=\"~> 1.7.0\" . bin/setup"
             - mix test
-        - name: Elixir 1.14.3, OTP 24.3, Phoenix ~> 1.7.0
+        - name: Elixir 1.14.5, OTP 26.0, Phoenix ~> 1.7.0
           commands:
-            - "ERLANG_VERSION=24.3 ELIXIR_VERSION=1.14.3 PHOENIX_VERSION=\"~> 1.7.0\" . bin/setup"
+            - "ERLANG_VERSION=26.0 ELIXIR_VERSION=1.14.5 PHOENIX_VERSION=\"~> 1.7.0\" . bin/setup"
             - mix test
-        - name: Elixir 1.13.3, OTP 24.3, Phoenix ~> 1.7.0
+        - name: Elixir main, OTP 25.3, Phoenix ~> 1.7.0
           commands:
-            - "ERLANG_VERSION=24.3 ELIXIR_VERSION=1.13.3 PHOENIX_VERSION=\"~> 1.7.0\" . bin/setup"
+            - "ERLANG_VERSION=25.3 ELIXIR_VERSION=main PHOENIX_VERSION=\"~> 1.7.0\" . bin/setup"
+            - mix test
+        - name: Elixir 1.15.0, OTP 25.3, Phoenix ~> 1.7.0
+          commands:
+            - "ERLANG_VERSION=25.3 ELIXIR_VERSION=1.15.0 PHOENIX_VERSION=\"~> 1.7.0\" . bin/setup"
+            - mix test
+        - name: Elixir 1.14.5, OTP 25.3, Phoenix ~> 1.7.0
+          commands:
+            - "ERLANG_VERSION=25.3 ELIXIR_VERSION=1.14.5 PHOENIX_VERSION=\"~> 1.7.0\" . bin/setup"
+            - mix test
+        - name: Elixir 1.13.4, OTP 25.3, Phoenix ~> 1.7.0
+          commands:
+            - "ERLANG_VERSION=25.3 ELIXIR_VERSION=1.13.4 PHOENIX_VERSION=\"~> 1.7.0\" . bin/setup"
+            - mix test
+        - name: Elixir main, OTP 24.3, Phoenix ~> 1.7.0
+          commands:
+            - "ERLANG_VERSION=24.3 ELIXIR_VERSION=main PHOENIX_VERSION=\"~> 1.7.0\" . bin/setup"
+            - mix test
+        - name: Elixir 1.15.0, OTP 24.3, Phoenix ~> 1.7.0
+          commands:
+            - "ERLANG_VERSION=24.3 ELIXIR_VERSION=1.15.0 PHOENIX_VERSION=\"~> 1.7.0\" . bin/setup"
+            - mix test
+        - name: Elixir 1.14.5, OTP 24.3, Phoenix ~> 1.7.0
+          commands:
+            - "ERLANG_VERSION=24.3 ELIXIR_VERSION=1.14.5 PHOENIX_VERSION=\"~> 1.7.0\" . bin/setup"
+            - mix test
+        - name: Elixir 1.13.4, OTP 24.3, Phoenix ~> 1.7.0
+          commands:
+            - "ERLANG_VERSION=24.3 ELIXIR_VERSION=1.13.4 PHOENIX_VERSION=\"~> 1.7.0\" . bin/setup"
             - mix test
         - name: Elixir 1.12.3, OTP 24.3, Phoenix ~> 1.7.0
           commands:
@@ -64,13 +92,13 @@ blocks:
           commands:
             - "ERLANG_VERSION=24.3 ELIXIR_VERSION=1.11.4 PHOENIX_VERSION=\"~> 1.7.0\" . bin/setup"
             - mix test
-        - name: Elixir 1.14.3, OTP 23.3, Phoenix ~> 1.6.0
+        - name: Elixir 1.14.5, OTP 23.3, Phoenix ~> 1.6.0
           commands:
-            - "ERLANG_VERSION=23.3 ELIXIR_VERSION=1.14.3 PHOENIX_VERSION=\"~> 1.6.0\" . bin/setup"
+            - "ERLANG_VERSION=23.3 ELIXIR_VERSION=1.14.5 PHOENIX_VERSION=\"~> 1.6.0\" . bin/setup"
             - mix test
-        - name: Elixir 1.13.3, OTP 23.3, Phoenix ~> 1.6.0
+        - name: Elixir 1.13.4, OTP 23.3, Phoenix ~> 1.6.0
           commands:
-            - "ERLANG_VERSION=23.3 ELIXIR_VERSION=1.13.3 PHOENIX_VERSION=\"~> 1.6.0\" . bin/setup"
+            - "ERLANG_VERSION=23.3 ELIXIR_VERSION=1.13.4 PHOENIX_VERSION=\"~> 1.6.0\" . bin/setup"
             - mix test
         - name: Elixir 1.12.3, OTP 23.3, Phoenix ~> 1.6.0
           commands:
@@ -84,9 +112,9 @@ blocks:
           commands:
             - "ERLANG_VERSION=23.3 ELIXIR_VERSION=1.10.4 PHOENIX_VERSION=\"~> 1.6.0\" . bin/setup"
             - mix test
-        - name: Elixir 1.13.3, OTP 22.3, Phoenix ~> 1.6.0
+        - name: Elixir 1.13.4, OTP 22.3, Phoenix ~> 1.6.0
           commands:
-            - "ERLANG_VERSION=22.3 ELIXIR_VERSION=1.13.3 PHOENIX_VERSION=\"~> 1.6.0\" . bin/setup"
+            - "ERLANG_VERSION=22.3 ELIXIR_VERSION=1.13.4 PHOENIX_VERSION=\"~> 1.6.0\" . bin/setup"
             - mix test
         - name: Elixir 1.12.3, OTP 22.3, Phoenix ~> 1.6.0
           commands:
