--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -119,6 +119,9 @@ jobs:
           - elixir: latest
             otp: 27.x
             phoenix: "~> 1.7.0"
+          - elixir: 1.17.x
+            otp: 27.x
+            phoenix: "~> 1.8.0-rc"
           - elixir: 1.16.x
             otp: 26.x
             phoenix: "~> 1.7.0"
