Ignore Dialyzer PLTs
Add the directory where Dialyzer's PLT files are stored to the
`.gitignore` file.

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,6 @@ appsignal_phoenix-*.tar
 
 # Ignore lock file to use latest versions of dependencies.
 mix.lock
+
+# The directory where Dialyzer stores its PLT files.
+/priv/
