CI/CD - use custom env to identify CI/CD run
Use custom env in CI/CD flow to identify it runs own GH Action runs for this package and not CI/CD of application which use this package as deps

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,16 +3,18 @@ name: Elixir Phoenix package CI
 on:
   push:
     branches:
-    - main
-    - develop
+      - main
+      - develop
   pull_request:
     types:
-    - opened
-    - reopened
-    - synchronize
+      - opened
+      - reopened
+      - synchronize
   schedule:
     - cron: "0 0 * * 1-5"
   workflow_dispatch:
+env:
+  CONTRIBUTION_CI: "true"
 
 jobs:
   lint_git:
